added files and ticker classes

--- a/WeatherStation/WeatherStation.vcxproj.filters
+++ b/WeatherStation/WeatherStation.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="WeatherBuoy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ticker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IWeatherSubject.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WeatherBuoy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ticker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
