--- a/WeatherStation/WeatherStation.vcxproj
+++ b/WeatherStation/WeatherStation.vcxproj
@@ -129,12 +129,14 @@
   <ItemGroup>
     <ClCompile Include="IObserver.cpp" />
     <ClCompile Include="IWeatherSubject.cpp" />
+    <ClCompile Include="Ticker.cpp" />
     <ClCompile Include="WeatherBuoy.cpp" />
     <ClCompile Include="WeatherStation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IObserver.h" />
     <ClInclude Include="IWeatherSubject.h" />
+    <ClInclude Include="Ticker.h" />
     <ClInclude Include="WeatherBuoy.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
