--- a/WeatherStation/WeatherStation.vcxproj.filters
+++ b/WeatherStation/WeatherStation.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Ticker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WeatherLogger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IWeatherSubject.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Ticker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WeatherLogger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
